# AgendaAI

./: .gitignore  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: user.py
backend/app/routes/: auth.py  db_test.py
backend/app/schemas/: user.py
frontend/: package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  index.tsx
frontend/src/components/: Login.tsx  Register.tsx
frontend/src/services/: api.ts
infra/: .env.example  docker-compose.yaml
mcp-servers/canvas-server/: main.py  pyproject.toml
mcp-servers/gmail-server/: main.py  pyproject.toml
mcp-servers/google-calendar-server/: main.py  pyproject.toml
