[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.121.2",
    "psycopg[binary]>=3.2.12",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.38.0",
]
